--- a/AwesomeProject/app.json
+++ b/AwesomeProject/app.json
@@ -24,10 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.fschenkun.AwesomeProject"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5915d399-b14d-4c8a-854c-87c66c8e21a4"
+      }
     }
   }
 }
